# goit-web-hw-13

./: pyproject.toml
myproject/myproject/: settings.py  urls.py
myproject/quotes/: forms.py  scrapping.py  urls.py  utils.py  views.py
myproject/quotes/migrations/: 0001_initial.py
myproject/quotes/static/quotes/: style.css
myproject/quotes/templates/quotes/: author_add.html  author_detail.html  base.html  index.html  quotes_by_tag.html
myproject/quotes/templatetags/: extract.py
myproject/users/: forms.py  urls.py  views.py
myproject/users/templates/users/: login.html  logout.html  register.html
myproject/utils/: authors.json  migration.py
